2005-09-05  Emanuele Aina <emanuele.aina@gmail.com>

	* buona_traduzione.html: aggiunto paragrafo su "and/or"

2005-08-31  Emanuele Aina <emanuele.aina@gmail.com>

	* *.html: modificato pesantemente il markup per renderlo più chiaro
	e coerente
	* index.html: modificato anche titolo, sottotitolo e introduzione,
	cancellando il sommario
	* progetti_traduzione.html: aggiunto il file
	* index.html: aggiunto paragrafo al documento sui progetti

2005-08-24  Emanuele Aina <emanuele.aina@gmail.com>

	* glossario.html: aggiunto "miniatura" per "thumbnail"

2005-08-22  Emanuele Aina <emanuele.aina@gmail.com>

	* glossario.html: posta la traduzione di "minimize, to" all'infinito
	* glossario.html: cambiato "source" in "source code" per essere più chiaro
	e aggiunto per la traduzione "codice sorgente" migliorando la spiegazione
	* glossario.html: evidenziata meglio la diffrenza tra "port" e "port, to"

2005-07-20  Emanuele Aina <emanuele.aina@tiscali.it>

	* index.html: corretto il collegamento agli archivi della lista
	da www.linux.it a lists.linux.it

2005-02-24  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: corretto il tag <keyboard> in <kbd>

2005-02-10  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: migliorata una frase nella sezione "Virgolette"

2005-02-09  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: modificato la sezione riguardante le virgolette
	chiarendo meglio cosa deve decidere il traduttore

2005-02-06  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: aggiunta una copia locale
	* data_ora_valuta.html: aggiunto grazie a Luca Ferretti
	* index.html: riscrittura parziale per poter ospitare tutta la
	documentazione prodotta e per avere uno stile marginalmente migliore :)
	* index.html: aggiornati i link per evitare redirect inutili (HTTP 301)

2004-12-13  Emanuele Aina <emanuele.aina@tiscali.it>

	* index.html: cambiati i link alla pagina personale di Emanuele