@@ -71,9 +71,16 @@
      <li>
      <h3>Parentesi</h3>
      <p>Le parentesi di apertura hanno uno spazio che le precede mentre la 
-     parola successiva è attaccata ad esse. Il contrario è vero per le 
-     parentesi di chiusura.</p>
+     parola successiva è attaccata ad esse. Il contrario è normalmente vero
+     per le parentesi di chiusura, mentre non va messo alcuno spazio tra
+     queste ed eventuali segni di punteggiatura.</p>
      <p>es. <samp>"Esempio (dell'uso) di parentesi."</samp></p>
+     
+     <p>In particolare, la punteggiatura del testo circostante non va
+     inserita all'interno delle parentesi ma va posta dopo la parentesi di 
+     chiusura.</p>
+     
+     <p>es. <samp>"Altro esempio (dell'uso di parentesi)."</samp></p>
      </li>
     
      <li>
