@@ -1,6 +1,8 @@
 2005-09-05  Emanuele Aina <emanuele.aina@gmail.com>
 
 	* buona_traduzione.html: aggiunto paragrafo su "and/or"
+	* buona_traduzione.html: chiarito l'uso della punteggiatura con le
+	parentesi
 
 2005-08-31  Emanuele Aina <emanuele.aina@gmail.com>
 
